# bmbp_r_api

./: Cargo.toml  README.md  bmbp.toml
crates/bmbp_app/: Cargo.toml
crates/bmbp_app/src/: config.rs  main.rs
crates/bmbp_app/src/core/: mod.rs  route.rs
crates/bmbp_app/src/core/abc/: const_value.rs  error.rs  mod.rs  req.rs  resp.rs  tree.rs  util.rs
crates/bmbp_app/src/core/auth/: route.rs
crates/bmbp_app/src/core/config/: route.rs
crates/bmbp_app/src/core/config/dict/: bean.rs  handler.rs  mod.rs  service.rs
crates/bmbp_app/src/core/config/vars/: bean.rs  handler.rs  service.rs
crates/bmbp_app/src/core/work/: action.rs  route.rs
crates/bmbp_app/src/orm/: mod.rs
crates/bmbp_orm/: Cargo.toml
crates/bmbp_orm/src/: lib.rs
crates/bmbp_orm/src/bean/: mod.rs  orm.rs  record.rs  row.rs  table.rs
crates/bmbp_orm/src/orm/: bean.rs  conn.rs  mod.rs  orm.rs  pool.rs  trans.rs
crates/bmbp_orm/src/sql/: mod.rs
crates/bmbp_orm/src/sql/bean/: column.rs  dml.rs  dql.rs  mod.rs  table.rs  value.rs
crates/bmbp_orm/src/sql/builder/: delete.rs  insert.rs  query.rs  update.rs  util.rs
crates/bmbp_orm/src/sql/render/: delete.rs  insert.rs  mod.rs  query.rs  update.rs  util.rs
crates/bmbp_orm/src/sql/types/: delete.rs  insert.rs  mod.rs  query.rs  update.rs
crates/bmbp_orm/src/sql/types/part/: column.rs  filter.rs  func.rs  ident.rs  table.rs
crates/bmbp_orm/src/types/: curd.rs  mod.rs  resp.rs  row.rs  sql.rs  table.rs  value.rs
crates/bmbp_orm/tests/: test_curd.rs  test_sql.rs
crates/bmbp_orm_marco/: Cargo.toml
src/: ctx.rs  embed.rs  main.rs
src/core/: mod.rs  route.rs
src/core/abc/: error.rs  mod.rs  req.rs  resp.rs  tree.rs
src/core/config/: mod.rs
src/core/rbac/: route.rs
src/core/setting/: bean.rs  mod.rs  route.rs
src/orm/: bean.rs  mod.rs
(+21 files in other folders)
