[package]
name = "bmbp_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.42.0",features = ["full"]}
salvo = {version = "0.74.3",features = ["serve-static"]}
serde = "1.0.216"
serde_json = "1.0.134"
rust-embed = "8.5.0"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"
tera = "1.0.0"