[package]
name = "bmbp_app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.42.0",features = ["full"]}
salvo = {version = "0.76.0",features = ["serve-static"]}
serde = "1.0.217"
serde_json = "1.0.135"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
# 数据库
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres","macros"] }
bmbp_orm = {workspace = true}

uuid = { version = "1.11.0", features = ["v4"] }
chrono = {version = "0.4.39",features = ["serde"]}