[package]
name = "bmbp_orm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.42.0",features = ["full"]}
serde = "1.0.216"
serde_json = "1.0.134"
tracing-subscriber = "0.3.19"
tracing-log = "0.2.0"

# 数据库
sqlx = { version = "0.8", features = [ "runtime-tokio","postgres","mysql","sqlite","macros"] }